JJCDV-51: Prevent domain data accordion icon overlap (#6)

--- a/src/scss/domain.scss
+++ b/src/scss/domain.scss
@@ -99,6 +99,7 @@
   cursor: pointer;
   display: flex;
   justify-content: space-between;
+  padding-right: 33px;
 
   &::after {
     content: '';
